--- a/giftyed/src/utils/variables.scss
+++ b/giftyed/src/utils/variables.scss
@@ -1,2 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
 $brown: #422D27;
+$whiteText: #EDE7DC;
+$orange: #F0AB55;
