--- a/giftyed/src/pages/login-page/LoginPage.css
+++ b/giftyed/src/pages/login-page/LoginPage.css
@@ -1,4 +1,14 @@
+.LoginPage {
+  width: 100vw;
+  height: 100vh;
+}
+.LoginPage__form {
+  position: absolute;
+  left: calc(50% - 350px);
+}
 .LoginPage__wavesImg {
   width: 100vw;
   height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=LoginPage.css.map */
