--- a/giftyed/src/components/loginForm/LoginForm.scss
+++ b/giftyed/src/components/loginForm/LoginForm.scss
@@ -3,14 +3,14 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 700px;
+  width: 600px;
   background-color: $brown;
 
   &__logoName {
     text-align: center;
     margin-top: 10vh;
     font-family: "Inter", sans-serif;
-    font-size: 98px;
+    font-size: 102px;
 
     &-one {
       color: #eda452;
@@ -23,7 +23,7 @@
 
   form {
     font-family: "Inter", sans-serif;
-    margin-top: 14vh;
+    margin-top: 10vh;
     .LoginForm__login,
     .LoginForm__password {
       display: flex;
@@ -35,18 +35,20 @@
       label {
         margin: 0  0 -2% 2%;
         color: $whiteText;
-        font-size: 24px;
+        font-size: 18px;
       }
 
       input {
-        height: 50px;
+        height: 35px;
         width: 55%;
+        padding-left: 15px;
+        color: $lightBrown;
         font-family: "Inter", sans-serif;
         background-color: $orange;
         font-size: 18px;
         border: none;
         border-radius: 25px;
-        margin-bottom: 10vh;
+        margin-bottom: 5vh;
       }
     }
 
@@ -54,14 +56,14 @@
       text-align: center;
 
       button {
-        height: 65px;
-        width: 150px;
+        height: 55px;
+        width: 115px;
         font-size: 24px;
         color: $lightBrown;
         background-color: $orange;
         font-family: "Inter", sans-serif;
         border: none;
-        border-radius: 25px;
+        border-radius: 20px;
       }
     }
   }
