--- a/giftyed/src/pages/login-page/LoginPage.scss
+++ b/giftyed/src/pages/login-page/LoginPage.scss
@@ -1,15 +1,16 @@
 .LoginPage{
-    width: 100vw;
-    height: 100vh;
+
     &__form{
         position: absolute;
-        left: calc(50% - 350px);
-        
+        left: calc(50% - 300px);
     }
 
     &__wavesImg{
+        position: absolute;
+        object-fit: cover;
         width: 100vw;
         height: 100vh;
-        object-fit: cover;
+        z-index: -1;
+        transform: rotate(180deg);
     }
 }
