--- a/giftyed/src/components/loginForm/LoginForm.css
+++ b/giftyed/src/components/loginForm/LoginForm.css
@@ -2,14 +2,14 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 700px;
+  width: 600px;
   background-color: #422D27;
 }
 .LoginForm__logoName {
   text-align: center;
   margin-top: 10vh;
   font-family: "Inter", sans-serif;
-  font-size: 72px;
+  font-size: 102px;
 }
 .LoginForm__logoName-one {
   color: #eda452;
@@ -19,7 +19,7 @@
 }
 .LoginForm form {
   font-family: "Inter", sans-serif;
-  margin-top: 7vh;
+  margin-top: 10vh;
 }
 .LoginForm form .LoginForm__login,
 .LoginForm form .LoginForm__password {
@@ -39,6 +39,8 @@
 .LoginForm form .LoginForm__password input {
   height: 35px;
   width: 55%;
+  padding-left: 15px;
+  color: #854b25;
   font-family: "Inter", sans-serif;
   background-color: #F0AB55;
   font-size: 18px;
@@ -50,12 +52,12 @@
   text-align: center;
 }
 .LoginForm form .LoginForm__button button {
-  height: 45px;
+  height: 55px;
   width: 115px;
   font-size: 24px;
   color: #854b25;
   background-color: #F0AB55;
   font-family: "Inter", sans-serif;
   border: none;
-  border-radius: 25px;
+  border-radius: 20px;
 }/*# sourceMappingURL=LoginForm.css.map */
