--- a/giftyed/src/components/loginForm/LoginForm.css
+++ b/giftyed/src/components/loginForm/LoginForm.css
@@ -2,14 +2,14 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 600px;
+  width: 550px;
   background-color: #422D27;
 }
 .LoginForm__logoName {
   text-align: center;
   margin-top: 10vh;
   font-family: "Inter", sans-serif;
-  font-size: 102px;
+  font-size: 118px;
 }
 .LoginForm__logoName-one {
   color: #eda452;
@@ -38,7 +38,7 @@
 .LoginForm form .LoginForm__login input,
 .LoginForm form .LoginForm__password input {
   height: 35px;
-  width: 55%;
+  width: 65%;
   padding-left: 15px;
   color: #854b25;
   font-family: "Inter", sans-serif;
@@ -48,16 +48,30 @@
   border-radius: 25px;
   margin-bottom: 5vh;
 }
-.LoginForm form .LoginForm__button {
+.LoginForm form .LoginForm__selection {
   text-align: center;
 }
-.LoginForm form .LoginForm__button button {
-  height: 55px;
+.LoginForm form .LoginForm__selection p {
+  margin: 1vh;
+  color: #854b25;
+  font-size: 16px;
+}
+.LoginForm form .LoginForm__loginButton,
+.LoginForm form .LoginForm__registerButton {
+  text-align: center;
+}
+.LoginForm form .LoginForm__loginButton button,
+.LoginForm form .LoginForm__registerButton button {
+  height: 50px;
   width: 115px;
-  font-size: 24px;
+  font-size: 21px;
   color: #854b25;
   background-color: #F0AB55;
   font-family: "Inter", sans-serif;
   border: none;
   border-radius: 20px;
+}
+.LoginForm form .LoginForm__loginButton button:hover,
+.LoginForm form .LoginForm__registerButton button:hover {
+  color: #EDE7DC;
 }/*# sourceMappingURL=LoginForm.css.map */
