--- a/giftyed/src/components/loginForm/LoginForm.scss
+++ b/giftyed/src/components/loginForm/LoginForm.scss
@@ -3,14 +3,14 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 600px;
+  width: 550px;
   background-color: $brown;
 
   &__logoName {
     text-align: center;
     margin-top: 10vh;
     font-family: "Inter", sans-serif;
-    font-size: 102px;
+    font-size: 118px;
 
     &-one {
       color: #eda452;
@@ -40,7 +40,7 @@
 
       input {
         height: 35px;
-        width: 55%;
+        width: 65%;
         padding-left: 15px;
         color: $lightBrown;
         font-family: "Inter", sans-serif;
@@ -52,19 +52,36 @@
       }
     }
 
-    .LoginForm__button {
+    .LoginForm__selection {
+      text-align: center;
+
+
+      p{
+        margin: 1vh;
+        color: $lightBrown;
+        font-size: 16px;
+      }
+    }
+
+    .LoginForm__loginButton,
+    .LoginForm__registerButton {
       text-align: center;
 
       button {
-        height: 55px;
+        height: 50px;
         width: 115px;
-        font-size: 24px;
+        font-size: 21px;
         color: $lightBrown;
         background-color: $orange;
         font-family: "Inter", sans-serif;
         border: none;
         border-radius: 20px;
       }
+
+      button:hover{
+        color: $whiteText;
+      }
+
     }
   }
 }
