--- a/giftyed/src/utils/variables.scss
+++ b/giftyed/src/utils/variables.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
 $brown: #422D27;
+$darkBrown: #2C1E1A;
 $whiteText: #EDE7DC;
 $orange: #F0AB55;
 $lightBrown: #854b25;
+$creamy: #ECD3AF;
