--- a/giftyed/src/components/loginForm/LoginForm.css
+++ b/giftyed/src/components/loginForm/LoginForm.css
@@ -2,7 +2,7 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 550px;
+  width: 600px;
   background-color: #422D27;
 }
 .LoginForm__logoName {
@@ -56,22 +56,78 @@
   color: #854b25;
   font-size: 16px;
 }
-.LoginForm form .LoginForm__loginButton,
-.LoginForm form .LoginForm__registerButton {
+.LoginForm form .LoginForm__loginButton {
   text-align: center;
 }
-.LoginForm form .LoginForm__loginButton button,
-.LoginForm form .LoginForm__registerButton button {
+.LoginForm form .LoginForm__loginButton button {
   height: 50px;
   width: 115px;
-  font-size: 21px;
+  font-size: 24px;
   color: #854b25;
   background-color: #F0AB55;
   font-family: "Inter", sans-serif;
   border: none;
   border-radius: 20px;
 }
-.LoginForm form .LoginForm__loginButton button:hover,
-.LoginForm form .LoginForm__registerButton button:hover {
+.LoginForm form .LoginForm__loginButton button:hover {
   color: #EDE7DC;
+}
+.LoginForm form .LoginForm__otherOptions {
+  margin: 4vh 3vw 0 3vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.LoginForm form .LoginForm__otherOptions .css-1xylxj1-MuiTypography-root-MuiLink-root {
+  font-size: 14px;
+  color: #854b25;
+  text-decoration: none;
+}
+.LoginForm form .LoginForm__otherOptions .css-1xylxj1-MuiTypography-root-MuiLink-root:hover {
+  color: #EDE7DC;
+}
+.LoginForm form .LoginForm__otherOptions-google .gsi-material-button {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-appearance: none;
+  background-color: #f2f2f2;
+  background-image: none;
+  border: none;
+  border-radius: 20px;
+  box-sizing: border-box;
+  color: #1f1f1f;
+  cursor: pointer;
+  font-family: "Roboto", arial, sans-serif;
+  font-size: 14px;
+  height: 40px;
+  letter-spacing: 0.25px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 12px;
+  position: relative;
+  text-align: center;
+  transition: background-color 0.218s, border-color 0.218s, box-shadow 0.218s;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: auto;
+  max-width: 400px;
+  min-width: -moz-min-content;
+  min-width: min-content;
+}
+.LoginForm form .LoginForm__otherOptions-google .gsi-material-button .gsi-material-button-icon {
+  height: 20px;
+  margin-right: 12px;
+  min-width: 20px;
+  width: 20px;
+}
+.LoginForm form .LoginForm__otherOptions-google .gsi-material-button .gsi-material-button-content-wrapper {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
 }/*# sourceMappingURL=LoginForm.css.map */
