--- a/giftyed/src/components/loginForm/LoginForm.scss
+++ b/giftyed/src/components/loginForm/LoginForm.scss
@@ -3,7 +3,7 @@
 .LoginForm {
   position: absolute;
   height: 100vh;
-  width: 550px;
+  width: 600px;
   background-color: $brown;
 
   &__logoName {
@@ -24,6 +24,7 @@
   form {
     font-family: "Inter", sans-serif;
     margin-top: 10vh;
+
     .LoginForm__login,
     .LoginForm__password {
       display: flex;
@@ -33,7 +34,7 @@
       flex-wrap: wrap;
 
       label {
-        margin: 0  0 -2% 2%;
+        margin: 0 0 -2% 2%;
         color: $whiteText;
         font-size: 18px;
       }
@@ -55,22 +56,20 @@
     .LoginForm__selection {
       text-align: center;
 
-
-      p{
+      p {
         margin: 1vh;
         color: $lightBrown;
         font-size: 16px;
       }
     }
 
-    .LoginForm__loginButton,
-    .LoginForm__registerButton {
+    .LoginForm__loginButton {
       text-align: center;
 
       button {
         height: 50px;
         width: 115px;
-        font-size: 21px;
+        font-size: 24px;
         color: $lightBrown;
         background-color: $orange;
         font-family: "Inter", sans-serif;
@@ -78,10 +77,82 @@
         border-radius: 20px;
       }
 
-      button:hover{
+      button:hover {
+        color: $whiteText;
+      }
+    }
+
+    .LoginForm__otherOptions {
+      margin: 4vh 3vw 0 3vw;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .css-1xylxj1-MuiTypography-root-MuiLink-root {
+        font-size: 14px;
+        color: $lightBrown;
+        text-decoration: none;
+      }
+
+      .css-1xylxj1-MuiTypography-root-MuiLink-root:hover{
         color: $whiteText;
       }
 
+      &-google{
+        .gsi-material-button {
+          -moz-user-select: none;
+          -webkit-user-select: none;
+          -ms-user-select: none;
+          -webkit-appearance: none;
+          background-color: #f2f2f2;
+          background-image: none;
+          border: none;
+          -webkit-border-radius: 20px;
+          border-radius: 20px;
+          -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+          color: #1f1f1f;
+          cursor: pointer;
+          font-family: 'Roboto', arial, sans-serif;
+          font-size: 14px;
+          height: 40px;
+          letter-spacing: 0.25px;
+          outline: none;
+          overflow: hidden;
+          padding: 0 12px;
+          position: relative;
+          text-align: center;
+          -webkit-transition: background-color .218s, border-color .218s, box-shadow .218s;
+          transition: background-color .218s, border-color .218s, box-shadow .218s;
+          vertical-align: middle;
+          white-space: nowrap;
+          width: auto;
+          max-width: 400px;
+          min-width: min-content;
+        }
+        
+        .gsi-material-button .gsi-material-button-icon {
+          height: 20px;
+          margin-right: 12px;
+          min-width: 20px;
+          width: 20px;
+        }
+        
+        .gsi-material-button .gsi-material-button-content-wrapper {
+          -webkit-align-items: center;
+          align-items: center;
+          display: flex;
+          -webkit-flex-direction: row;
+          flex-direction: row;
+          -webkit-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+          height: 100%;
+          justify-content: space-between;
+          position: relative;
+          width: 100%;
+        }
+        
+      }
     }
   }
 }
