--- a/giftyed/src/pages/home-page/HomePage.scss
+++ b/giftyed/src/pages/home-page/HomePage.scss
@@ -5,8 +5,8 @@
     position: fixed;
     left: 0;
     top: 0;
-    width: 620px;
-    height: 500px;
+    width: 35vw;
+    height: 40vh;
   }
 
   &__content {
@@ -14,6 +14,7 @@
 
     &-giftImg {
       position: absolute;
+      width: 40vw;
       bottom: 60px;
       right: 135px;
     }
