--- a/giftyed/src/pages/home-page/HomePage.css
+++ b/giftyed/src/pages/home-page/HomePage.css
@@ -13,11 +13,12 @@
 }
 .HomePage__content-giftImg {
   position: absolute;
-  width: 40vw;
+  width: 35vw;
   bottom: 60px;
   right: 135px;
 }
 .HomePage__content-shadow {
+  z-index: -1;
   position: absolute;
   height: 355px;
   width: 730px;
