--- a/giftyed/src/components/singInButton/SignInButton.scss
+++ b/giftyed/src/components/singInButton/SignInButton.scss
@@ -1,6 +1,6 @@
 @import '../../utils/variables.scss';
 
-.sign-up-button {
+.sign-in-button {
   
   .gsi-material-button {
     background-color: #f2f2f2;
