Added local storage

--- a/giftyed/src/components/navbar/Navbar.scss
+++ b/giftyed/src/components/navbar/Navbar.scss
@@ -23,6 +23,9 @@
   }
 
   &__user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 15px;
 
     &-img {
@@ -30,7 +33,7 @@
       height: 45px;
     }
 
-    &-singIn{
+    &-AuthButton{
       display: flex;
       flex-direction: column;
       align-items: center;
