--- a/giftyed/src/components/navbar/Navbar.css
+++ b/giftyed/src/components/navbar/Navbar.css
@@ -17,13 +17,16 @@
   color: #854b25;
 }
 .Navbar__user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 15px;
 }
 .Navbar__user-img {
   width: 45px;
   height: 45px;
 }
-.Navbar__user-singIn {
+.Navbar__user-AuthButton {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,6 +35,6 @@
   font-family: "Inter", sans-serif;
   text-decoration: none;
 }
-.Navbar__user-singIn:hover {
+.Navbar__user-AuthButton:hover {
   color: #854b25;
 }/*# sourceMappingURL=Navbar.css.map */
