--- a/giftyed/src/components/registerForm/RegisterForm.scss
+++ b/giftyed/src/components/registerForm/RegisterForm.scss
@@ -38,7 +38,8 @@
     margin-top: 3vh;
 
     &-email,
-    &-login,
+    &-firstName,
+    &-lastName,
     &-password,
     &-confirmPassword {
       display: flex;
