--- a/giftyed/src/components/searchList/SearchList.css
+++ b/giftyed/src/components/searchList/SearchList.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .SearchList {
   width: 95vw;
-  height: 55vh;
+  height: calc(65vh - 50px);
   font-family: "Inter", sans-serif;
   border-radius: 25px;
   background-color: rgba(233, 202, 192, 0.7);
