--- a/giftyed/src/components/searchList/SearchList.scss
+++ b/giftyed/src/components/searchList/SearchList.scss
@@ -2,7 +2,7 @@
 
 .SearchList{
     width: 95vw;
-    height: 55vh;
+    height: calc(65vh - 50px);
     font-family: "Inter", sans-serif;
     border-radius: 25px;
     background-color: rgba(233, 202, 192, 0.7);
