--- a/giftyed/src/components/loginForm/LoginForm.scss
+++ b/giftyed/src/components/loginForm/LoginForm.scss
@@ -20,6 +20,7 @@
   }
 
   &__logoName {
+    cursor: pointer;
     text-align: center;
     margin-top: 10vh;
     font-size: 118px;
@@ -67,6 +68,7 @@
       text-align: center;
 
       button {
+        cursor: pointer;
         height: 50px;
         width: 115px;
         font-size: 24px;
