--- a/giftyed/src/components/navbar/Navbar.css
+++ b/giftyed/src/components/navbar/Navbar.css
@@ -8,6 +8,7 @@
   width: 100vw;
 }
 .Navbar__match, .Navbar__best, .Navbar__followed, .Navbar__search {
+  cursor: pointer;
   font-size: 14px;
   margin: 0 1vw 0 1vw;
   font-family: "Inter", sans-serif;
@@ -17,6 +18,7 @@
   color: #854b25;
 }
 .Navbar__user {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
