--- a/giftyed/src/components/navbar/Navbar.css
+++ b/giftyed/src/components/navbar/Navbar.css
@@ -4,8 +4,9 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  width: 100%;
   top: 0;
-  width: 100vw;
+  position: absolute;
 }
 .Navbar__match, .Navbar__best, .Navbar__followed, .Navbar__search {
   cursor: pointer;
