--- a/giftyed/src/components/navbar/Navbar.scss
+++ b/giftyed/src/components/navbar/Navbar.scss
@@ -5,8 +5,9 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  width: 100%;
   top: 0;
-  width: 100vw;
+  position: absolute;
 
   &__match,
   &__best,
