--- a/giftyed/src/components/profileMenu/ProfileMenu.css
+++ b/giftyed/src/components/profileMenu/ProfileMenu.css
@@ -1,44 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .profile-menu {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  background-color: #ECD3AF;
-}
-.profile-menu__upcomingBirthday {
-  width: 33.33%;
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #ecd3af;
+  height: 100%;
 }
 .profile-menu__upcomingBirthday-header {
   font-family: "Inter", sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   color: #854b25;
   text-align: center;
 }
 .profile-menu__upcomingBirthday-followedUsers {
   display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
-  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
 }
 .profile-menu__calendar {
-  display: flex;
-  align-items: center;
-  width: 33.33%;
+  margin-top: 4vh;
 }
 .profile-menu__calendar .MuiDateCalendar-root {
   color: #EDE7DC;
   border-radius: 25px;
   background-color: #422D27;
   font-family: "Inter", sans-serif;
+  height: 40vh;
+  width: 25vw;
+  overflow-y: auto;
+}
+.profile-menu__calendar .MuiDateCalendar-root::-webkit-scrollbar {
+  display: none;
 }
 .profile-menu__calendar .MuiPickersDay-root {
   color: #EDE7DC;
   font-family: "Inter", sans-serif;
+  margin: 0;
 }
 .profile-menu__calendar .MuiDayCalendar-weekDayLabel,
 .profile-menu__calendar .MuiPickersArrowSwitcher-button,
 .profile-menu__calendar .MuiPickersCalendarHeader-switchViewButton {
+  margin: 0;
   color: #EDE7DC;
   font-family: "Inter", sans-serif !important;
 }
@@ -48,17 +48,13 @@
 .profile-menu__calendar .MuiPickersDay-root.Mui-selected {
   background-color: #F0AB55 !important;
 }
-.profile-menu__wishList {
-  width: 33.33%;
-}
 .profile-menu__wishList-header {
   font-family: "Inter", sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   color: #854b25;
   text-align: center;
 }
 .profile-menu__wishList-items {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
 }/*# sourceMappingURL=ProfileMenu.css.map */
