--- a/giftyed/src/components/wishItem/WishItem.css
+++ b/giftyed/src/components/wishItem/WishItem.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .wish-item__square {
-  width: 200px;
-  height: 200px;
-  border-radius: 25px;
+  width: 7vw;
+  height: 7vw;
+  border-radius: 1.5vw;
   background-color: #422D27;
+  margin-bottom: 2vh;
 }/*# sourceMappingURL=WishItem.css.map */
