--- a/giftyed/src/pages/profile-page/ProfilePage.scss
+++ b/giftyed/src/pages/profile-page/ProfilePage.scss
@@ -1,15 +1,15 @@
 .ProfilePage {
   &__content {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 96px);
     justify-content: flex-start;
     &-info {
-      height: 50%;
+      height: 55%;
     }
 
     &-menu {
-      height: 50%;
+      height: 45%;
     }
   }
 }
